<resources>
    <string name="app_name">Dawrly</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>

    <string name="Open">Open Drawer</string>
    <string name="Close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
